WinLauncher should show loading errors https://bugs.webkit.org/show_bug.cgi?id=80760

Patch by Ashod Nakashian <ashodnakashian@yahoo.com> on 2012-06-12
Reviewed by Brent Fulgham.

* WinLauncher/WinLauncher.cpp: Added load-fail handler to show messagebox with error.
(WinLauncherWebHost::didFailProvisionalLoadWithError):
* WinLauncher/WinLauncher.h:
(WinLauncherWebHost::didFailProvisionalLoadWithError):
(WinLauncherWebHost):

Canonical link: https://commits.webkit.org/106757@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120133 268f45cc-cd09-0410-ab3c-d52691b4dbfc